# auto-merge

./: .gitignore  .pre-commit-config.yaml  .yamllint.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: automerge.yml
.github/workflows/: ci.yml  pre-commit.yml  ruff.yml  trivy.yml  yamllint.yml
.junie/: guidelines.md
app/: __init__.py  config.py  github.py  main.py  metrics.py  models.py  queue.py  worker.py
k8s/: app-deployment.yaml  redis.yaml
tests/: conftest.py  test_integration_check_suite_payload.py  test_main_webhook.py  test_queue.py  test_rate_limit.py  test_require_label.py  test_skipped_checks.py  test_token_cache.py  test_worker.py
