[project]
name = "auto-merge-webhook"
version = "0.1.0"
description = "GitHub App webhook service for FIFO auto-merge with Redis-backed queue and Prometheus metrics"
authors = [{ name = "Auto Merge Bot" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
  "redis>=5.0",
  "pydantic>=2.6",
  "PyJWT[crypto]>=2.8",
  "prometheus-client>=0.20",
  "tenacity>=8.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "fakeredis>=2.23",
  "requests>=2.32",
  "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[project.scripts]
auto-merge-webhook = "app.main:app"

[tool.uv]
# Using uv for dependency management and sync

[tool.ruff]
line-length = 100
