[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-merge-webhook"
version = "0.1.0"
description = "GitHub App webhook service for FIFO auto-merge with Redis-backed queue and Prometheus metrics"
authors = [{ name = "Auto Merge Bot" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  # FastAPI v0.115+ uses Starlette 0.41+ and Pydantic v2
  "fastapi>=0.115.0",
  # Uvicorn latest stable for 2025 timeframe
  "uvicorn[standard]>=0.31.0",
  # httpx >=0.28 includes fixes for TestClient and deprecation paths
  "httpx>=0.28.1",
  # Redis 5.0+ client
  "redis>=5.0.5",
  # Pydantic v2 latest
  "pydantic>=2.9.0",
  # PyJWT latest
  "PyJWT[crypto]>=2.9.0",
  # Prometheus client latest
  "prometheus-client>=0.21.0",
  # Tenacity latest major with Python 3.11 support
  "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "fakeredis>=2.23",
  "requests>=2.32",
  "pytest-cov>=5.0",
  "ruff>=0.6.4",
]

[tool.setuptools]
# Only package the Python code under the "app" package.
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.uv]
# Using uv for dependency management and sync

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.format]
quote-style = "preserve"
indent-style = "space"
line-ending = "auto"
